<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/ic_user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@mipmap/ic_agenda"
            android:title="@string/agenda" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@mipmap/ic_payment"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@mipmap/ic_chats"
            android:title="@string/chats" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
